Added integration test for RefinedPlaylist.